Fixing spacing issue on products

--- a/styles/compile/gallery.sass
+++ b/styles/compile/gallery.sass
@@ -13,6 +13,7 @@ div[is="gallery"]
       *
         border-radius: $border-m
         display: inline-block
+        max-width: 80vw
         margin-right: units(1)
 
   @include min($screen-m)
