--- a/styles/compile/product.sass
+++ b/styles/compile/product.sass
@@ -1,6 +1,7 @@
 @import '../assets'
 
 div[is="product"]
+  padding-bottom: units(8)
 
   > div
     @extend %main-content
